Skip module-path style options when extracting launcher classpath